# bhlib

./: .env.example  .gitignore  README.md  bhlib.py  lcc.py  pyproject.toml
macos/LCCMenuBar/: Package.swift  README.md
macos/LCCMenuBar/Sources/LCCMenuBar/: ActionsView.swift  AppModel.swift  LCCMenuBarApp.swift  LCCRunner.swift  MainWindowView.swift  MenuContentView.swift  Models.swift  PomodoroModel.swift  PomodoroView.swift  SeatsView.swift  SettingsView.swift
src/bhlib/: api.py  areas.py  auth.py  cas.py  cli.py  config.py  http.py  pomo_daemon.py  pomo_utils.py  seatmap.py
src/lcc/: areas.py  auth.py  cas.py  cli.py  config.py  crypto.py  env.py  http.py
