[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "bhlib"
version = "0.2.0"
description = "CLI for booking.lib.buaa.edu.cn (BUAA library)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "UNLICENSED" }
authors = [{ name = "kawarox" }]

[project.scripts]
bhlib = "bhlib.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
